--- a/about.html
+++ b/about.html
@@ -1,9 +1,4 @@
----
-layout: page
-title: "About"
-description: "Hey, this is JP."
-header-img: "img/post-bg-rwd.jpg"
----
+--- layout: page title: "About" description: "Hey, this is JP." header-img: "img/post-bg-rwd.jpg" ---
 
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
@@ -15,24 +10,38 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>水滴穿石 非一日之功<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote>
+        <p>水滴穿石 非一日之功
+            <br> 积土成山 非斯须之作</p>
+    </blockquote>
 
-    <p>Hey，我是<strong>佳朋(JP)</strong>，大三学生狗一枚，现在烟台读书。</p>
+    <p>Hey，我是
+        <strong>JP</strong>，大三学生狗一枚，现在烟台读书。</p>
 
     <p>爱学习，爱编程，爱咖啡可乐。爱读书和音乐~我擅长技术，崇尚简单的快乐和幸福。我神秘而孤僻，沉默而爱憎分明。我是程序员，但我不是没有感情~</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/hongjiapeng">👉GitHub·JP</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用
+        <a href="https://pages.github.com/">GitHub Pages</a> 与
+        <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页
+        <a href="https://github.com/hongjiapeng">👉GitHub·JP</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
-    
+
     <h5>Talks</h5>
 
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
+        <li>
+            <a href="https://github.com">GitHub</a>
+        </li>
+        <li>
+            <a href="http://jekyll.com.cn/">jekyll</a>
+        </li>
+        <li>
+            <a href="http://huangxuan.me/">Hux</a>
+        </li>
+        <li>
+            <a href="https://analytics.google.com/analytics">Google Analytics</a>
+        </li>
     </ul>
 </div>
 
@@ -68,15 +77,15 @@ header-img: "img/post-bg-rwd.jpg"
     window.addEventListener('hashchange', _render);
 
     // handle render
-    function _render(){
+    function _render() {
         var _hash = window.location.hash;
         // en
-        if(_hash == "#en"){
+        if (_hash == "#en") {
             $select.selectedIndex = 1;
             $en.style.display = "block";
             $zh.style.display = "none";
-        // zh by default
-        }else{
+            // zh by default
+        } else {
             // not trigger onChange, otherwise cause a loop call.
             $select.selectedIndex = 0;
             $zh.style.display = "block";
@@ -85,10 +94,10 @@ header-img: "img/post-bg-rwd.jpg"
     }
 
     // handle select change
-    function onLanChange(index){
-        if(index == 0){
+    function onLanChange(index) {
+        if (index == 0) {
             window.location.hash = "#zh"
-        }else{
+        } else {
             window.location.hash = "#en"
         }
     }
@@ -99,34 +108,36 @@ header-img: "img/post-bg-rwd.jpg"
 
 
 <!-- Gitalk 评论 start  -->
-<!-- {% if site.gitalk.enable %} -->
+{% if site.gitalk.enable %}
 <!-- Gitalk link  -->
-<!-- <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
 <div id="gitalk-container"></div>
-    <script type="text/javascript">
+<script type="text/javascript">
     var gitalk = new Gitalk({
-    clientID: '{{site.gitalk.clientID}}',
-    clientSecret: '{{site.gitalk.clientSecret}}',
-    repo: '{{site.gitalk.repo}}',
-    owner: '{{site.gitalk.owner}}',
-    admin: ['{{site.gitalk.admin}}'],
-    distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-    id: 'about',
+        clientID: '{{site.gitalk.clientID}}',
+        clientSecret: '{{site.gitalk.clientSecret}}',
+        repo: '{{site.gitalk.repo}}',     //存储你评论 issue 的 Github 仓库名（建议直接用 GitHub Page 的仓库名）
+        owner: '{{site.gitalk.owner}}',   //Github 用户名
+        admin: ['{{site.gitalk.admin}}'], //这个仓库的管理员，可以有多个，用数组表示，一般写自己,
+        distractionFreeMode: {{ site.gitalk.distractionFreeMode }},
+    id: 'about', //页面的唯一标识，gitalk 会根据这个标识自动创建的issue的标签,我们使用页面的相对路径作为标识
     });
     gitalk.render('gitalk-container');
-</script>
-{% endif %} -->
+</script> {% endif %}
+
+
 <!-- Gitalk end -->
 
- <!-- disqus 评论框 start  -->
-<!-- {% if site.disqus.enable %} -->
 
-<!-- <div class="comment">
+<!-- disqus 评论框 start  -->
+{% if site.disqus.enable %}
+
+<div class="comment">
     <div id="disqus_thread" class="disqus-thread">
     </div>
-</div> -->
+</div>
 <!-- disqus 评论框 end -->
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
@@ -136,7 +147,7 @@ header-img: "img/post-bg-rwd.jpg"
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
     var disqus_url = "{{site.url}}{{page.url}}";
 
-    (function() {
+    (function () {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
@@ -144,4 +155,3 @@ header-img: "img/post-bg-rwd.jpg"
 </script>
 <!-- disqus 公共JS代码 end -->
 {% endif %}
-
