--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ header-img: "img/post-bg-rwd.jpg"
     </blockquote>
 
     <p>Hey，我是
-        <strong>JP</strong>JP，。</p>
+        <strong>JP</strong></p>
 
     <p>爱学习，爱编程，爱咖啡可乐。爱读书和音乐~我擅长技术，崇尚简单的快乐和幸福。我神秘而孤僻，沉默而爱憎分明。我是程序员，但我不是没有感情~</p>
 
