--- a/about.html
+++ b/about.html
@@ -1,9 +1,4 @@
---- 
-layout: page 
-title: "About" 
-description: "Hey, this is JP."
-header-img: "img/post-bg-rwd.jpg"
----
+--- layout: page title: "About" description: "Hey, this is JP." header-img: "img/post-bg-rwd.jpg" ---
 
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
@@ -21,9 +16,15 @@ header-img: "img/post-bg-rwd.jpg"
     </blockquote>
 
     <p>Hey，我是
-        <strong>JP</strong></p>
+        <strong>JP</strong>
+    </p>
 
-    <p>爱学习，爱编程，爱咖啡可乐。爱读书和音乐~我擅长技术，崇尚简单的快乐和幸福。我神秘而孤僻，沉默而爱憎分明。我是程序员，但我不是没有感情~</p>
+    <p>确定了目标之后你成功了10%，但是剩下的90%之中，多数是坚持不懈的努力，你会遇到迷茫、遇到挫折，此时不要放弃，回忆你立定目标的决心，成功就在你眼前！习惯很容易养成，一件事情，只要你能咬牙坚持10天，它自然就成了习惯！
+        <br> 现代人变得越来越浮躁，不妨静下心来用音乐洗礼你的心灵！
+    </p>
+    <div align=life>
+        <iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://music.163.com/outchain/player?type=2&id=3951353&auto=0&height=66"></iframe>
+    </div>
 
     <p>这是我的利用
         <a href="https://pages.github.com/">GitHub Pages</a> 与
