--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
         确定了目标之后你成功了10%，但是剩下的90%之中，多数是坚持不懈的努力，你会遇到迷茫、遇到挫折，此时不要放弃，回忆你立定目标的决心，成功就在你眼前！习惯很容易养成，一件事情，只要你能咬牙坚持10天，它自然就成了习惯！    
         现代人变得越来越浮躁，不妨静下心来用音乐洗礼你的心灵！
     </p>
-    <div align=life>
-        <iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://music.163.com/outchain/player?type=2&id=3951353&auto=0&height=66"></iframe>
+    <div>  
+        <object width="340" height="86" data="http://music.163.com/style/swf/widget.swf?sid=3951353&type=2&auto=0&width=320&height=66" type="application/x-shockwave-flash"></object>  
     </div>
 
     <p>这是我的利用
