--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
---- layout: page title: "About" description: "Hey, this is BY." header-img: "img/post-bg-rwd.jpg" ---
+--- layout: page title: "About" description: "Hey, this is JP." header-img: "img/post-bg-rwd.jpg" ---
 
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
@@ -11,20 +11,22 @@
 
     <!--copied from markdown -->
     <blockquote>
-        <p>冰冻三尺 非一日之寒
+        <p>水滴穿石 非一日之功
             <br> 积土成山 非斯须之作</p>
     </blockquote>
 
     <p>Hey，我是
-        <strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+        <strong>JP</strong>，现在上海工作。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
-   
+    <p>确定了目标之后你成功了10%，但是剩下的90%之中，多数是坚持不懈的努力， 你会遇到迷茫、遇到挫折，此时不要放弃，回忆你立定目标的决心，成功就在你眼前！习惯很容易养成，一件事情，只要你能咬牙坚持10天，它自然就成了习惯！
+    </p>
+    <!-- <div>  
+        <object width="340" height="86" data="http://music.163.com/style/swf/widget.swf?sid=3951353&type=2&auto=0&width=320&height=66" type="application/x-shockwave-flash"></object>  
+    </div> -->
     <p>这是我的利用
         <a href="https://pages.github.com/">GitHub Pages</a> 与
         <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页
-        <a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页
-        <a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+        <a href="https://github.com/hongjiapeng">👉GitHub·JP</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
 
@@ -119,15 +121,18 @@
     var gitalk = new Gitalk({
         clientID: '{{site.gitalk.clientID}}',
         clientSecret: '{{site.gitalk.clientSecret}}',
-        repo: '{{site.gitalk.repo}}',
-        owner: '{{site.gitalk.owner}}',
-        admin: ['{{site.gitalk.admin}}'],
+        repo: '{{site.gitalk.repo}}',     //存储你评论 issue 的 Github 仓库名（建议直接用 GitHub Page 的仓库名）
+        owner: '{{site.gitalk.owner}}',   //Github 用户名
+        admin: ['{{site.gitalk.admin}}'], //这个仓库的管理员，可以有多个，用数组表示，一般写自己,
         distractionFreeMode: {{ site.gitalk.distractionFreeMode }},
-    id: 'about',
+    id: 'about', //页面的唯一标识，gitalk 会根据这个标识自动创建的issue的标签,我们使用页面的相对路径作为标识
     });
     gitalk.render('gitalk-container');
 </script> {% endif %}
+
+
 <!-- Gitalk end -->
+
 
 <!-- disqus 评论框 start  -->
 {% if site.disqus.enable %}
