--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 --- layout: page title: "About" description: "Hey, this is JP." header-img: "img/post-bg-rwd.jpg" ---
 
 <!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
     <option value="1"> 英文 English </option>
-</select> -->
+</select>
 
 <!-- Chinese Version -->
 <div class="zh post-container">
@@ -16,7 +16,7 @@
     </blockquote>
 
     <p>Hey，我是
-        <strong>JP</strong>，现在上海工作。</p>
+        <strong>JP</strong></p>
 
     <p>确定了目标之后你成功了10%，但是剩下的90%之中，多数是坚持不懈的努力， 你会遇到迷茫、遇到挫折，此时不要放弃，回忆你立定目标的决心，成功就在你眼前！习惯很容易养成，一件事情，只要你能咬牙坚持10天，它自然就成了习惯！
     </p>
