--- a/about.html
+++ b/about.html
@@ -1,10 +1,15 @@
---- layout: page title: "About" description: "Hey, this is JP." header-img: "img/post-bg-rwd.jpg" ---
+--- 
+layout: page 
+title: "About" 
+description: "Hey, this is JP." 
+header-img: "img/post-bg-rwd.jpg" 
+---
 
 <!-- Language Selector -->
-<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
     <option value="1"> 英文 English </option>
-</select>
+</select> -->
 
 <!-- Chinese Version -->
 <div class="zh post-container">
